# Perplexica

backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt  run.py  setup.sh
backend/agents/: agents.yaml  main.py  meta_search_agent.py  sk_agents.py  sk_helper.py  sk_researcher_agent.py  sk_researcher_prompts.py  sk_search_agent.py  sk_trading_agent.py  sk_trading_core.py  sk_trading_prompts.py  sk_trading_tools.py  sk_web_tools.py  utils.py
backend/alembic/: env.py
backend/app/: __init__.py  depends.py  main.py
backend/app/core/: background_tasks.py  cache.py  config.py  prompts.py  security.py  stream_manager.py  ui_message_stream.py  ui_messages.py
backend/app/db/: converters.py  database.py  init_db.py  models.py  schemas.py  service.py
backend/mcp/: main.py  web_fetch.py  web_search.py
backend/novas_agents/: entrypoint.sh  main.py  requirements.txt  sk_agents.py  sk_agents.yaml  sk_helper.py  sk_react.py  sk_researcher_agent.py  sk_trading_agent.py  sk_trading_core.py  utils.py
backend/novas_app/: depends.py  entrypoint.sh  main.py
backend/novas_mcp/: .gitignore  main.py  pyproject.toml  trading_api.py  trading_core.py  trading_mcp.py  utils.py  web_api.py  web_fetch.py  web_mcp.py
backend/novas_mcp/trading/: trading_akshare.py  trading_em.py  trading_em_financial.py  trading_em_sentiment.py  trading_em_stock.py
frontend/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/public/: manifest.json  offline.html  sw.js
frontend/scripts/: generate-icons.ts
src/components/: EmptyChat.tsx
(+197 files in other folders)
