[project]
name = "novas-mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) server for Novas AI trading and financial analysis"
requires-python = ">=3.9"
dependencies = [
    "akshare>=1.12.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "mcp>=1.0.0",
    "asyncio",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
